# idlefactorygame2

./: Cargo.toml  index.html
.github/workflows/: gh-pages-deploy.yml
src/: components.rs  content.rs  engine.rs  main.rs  types.rs
src/components/: email_form.rs  factory_app.rs  factory_app.scss  item_image_display.rs  number_go_up.rs  numeric_input.rs  recipe_display.rs  simple_counter.rs
src/content/: base_content.rs
src/types/: item_stats.rs  recipe.rs  runtime_state.rs  runtime_state_0.rs  runtime_state_1.rs
variables/: color.scss
