[package]
name = "idlefactorygame2"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8", features = ["csr"] }
thiserror = "2.0.12"
async-std = "1.13.1"

[dependencies.leptos_router]
version = "0.8"


[dependencies.malachite]
version = "0.6.0"
features = ["rationals", "naturals_and_integers", "serde"]

[dependencies.web-sys]
version = "0.3.77"
features = ['Window', "Storage"]